--- a/Chip8/Chip8.vcxproj.filters
+++ b/Chip8/Chip8.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\x64\Debug\test.ch8">
+      <Filter>Source Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
